Added sample plan.json

--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,58 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
-	
-		<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<configuration>
-			<descriptors>
-				<descriptor>src/assembly.xml</descriptor>
-			</descriptors>
-			<tarLongFileMode>posix</tarLongFileMode>
-		</configuration>
-		</plugin>
+	      <plugin>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>3.3</version>
+	        <configuration>
+	          <source>1.8</source>
+	          <target>1.8</target>
+	        </configuration>
+	      </plugin>
+		   
+		   <plugin>
+		      <!-- Build an executable JAR -->
+		      <groupId>org.apache.maven.plugins</groupId>
+		      <artifactId>maven-jar-plugin</artifactId>
+		      <version>3.1.0</version>
+		      <configuration>
+		        <archive>
+		          <manifest>
+		            <addClasspath>true</addClasspath>
+		            <classpathPrefix>lib/</classpathPrefix>
+		            <mainClass>dshukla.EnergyComparison.Solution</mainClass>
+		          </manifest>
+		        </archive>
+		        <descriptorRefs>
+                          <descriptorRef>jar-with-dependencies</descriptorRef>
+                     </descriptorRefs>
+		      </configuration>
+		    </plugin>
+			    
+			  
+		  <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+            <archive>
+	          <manifest>
+	            <addClasspath>true</addClasspath>
+	            <classpathPrefix>lib/</classpathPrefix>
+	            <mainClass>dshukla.EnergyComparison.Solution</mainClass>
+	          </manifest>
+	        </archive>
+             <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+            </configuration>
+        </plugin> 
 	
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
